--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ROCK, PAPER, SCISSOR</h1>
-    <script src="./main.js"></script>
+    <div class="main-container">
+        <h1>ROCK, PAPER, SCISSOR</h1>
+        <button id="play-btn">PLAY</button>
+        <script src="./main.js"></script>
+    </div>
 </body>
 </html>
